// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLayout is rendered correctly 1`] = `
<div
  style={
    Object {
      "paddingTop": "50px",
      "zIndex": -1,
    }
  }
>
  <WithStyles(Connect(Header)) />
  <div
    style={
      Object {
        "minHeight": "calc(100vh - 50px)",
        "padding": "30px 15px",
      }
    }
  >
    <Component />
  </div>
</div>
`;

exports[`withLayout is rendered correctly 2`] = `
<div
  style={
    Object {
      "paddingTop": "50px",
      "zIndex": -1,
    }
  }
>
  <WithStyles(Connect(Header)) />
  <div
    style={
      Object {
        "minHeight": "calc(100vh - 90px)",
        "padding": "30px 15px",
      }
    }
  >
    <Component />
  </div>
  <WithStyles(Footer) />
</div>
`;
